Fri Mar 26 13:03:58 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/Getter_T.cpp:
          Removed unnecessary code.

Fri Mar 26 12:20:07 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component.idl:
        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.h:
        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.cpp:
        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/descriptors/Plan.cdp:
          Added extra component and connector in order to detect runtime errors during shutdown.
          The shutdown errors which occured were related to the implementation of topic reuse
          in the dds4ccm connector.

Fri Mar 26 10:07:39 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.cpp:
          Don't use find_topic since it creates a new topic which has
          to be deleted. Use lookup_description instead. This way, there're no
          errors when deleting the DomainParticipant.

Fri Mar 26 08:25:43 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/performance-tests/DDSLatency/DDS_Sender/Latency_Sender.cpp:
          Fixed warnings on linux.

Thu Mar 25 19:14:46 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DomainParticipant.h:
        * connectors/dds4ccm/impl/dds/DomainParticipant.cpp:
          Improved deletion of topics.
          Improved logging.

        * connectors/dds4ccm/impl/dds/DomainParticipantFactory.h:
        * connectors/dds4ccm/impl/dds/DomainParticipantFactory.cpp:
          Improved deletion of DomainParticipants
          Improved logging.

Thu Mar 25 15:44:51 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDS_Base_Connector_T.cpp: