@@ -1,3 +1,11 @@
+Fri Mar 26 15:50:27 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/dds/Getter_T.h:
+          Changed doxygen documentation.
+
+        * connectors/dds4ccm/impl/dds/Reader_T.h:
+          Added doxygen documentation.
+
 Fri Mar 26 13:03:58 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/dds/Getter_T.cpp:
